add error handling for resttemplate

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<!--Swagger-->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
