add swagger + bean validator

--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,14 @@
 		<!--Swagger-->
 		<dependency>
 			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
 		</dependency>
+    <!--validation-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
 
 	</dependencies>
 
