move hardcode value to config file with @value

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+MEC.product.search.url=https://www.mec.ca/api/v1/products/search?keywords=
+imgix.color.pallette.parameter=palette=json
+mec.cdn.name=cdn.mec.ca
+mec.imgix.name=mec.imgix.net
